--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/jest": "^29.5.14",
 		"@types/node": "^16.18.116",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
@@ -23,6 +24,7 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
-		"@popperjs/core": "^2.11.8"
+		"@popperjs/core": "^2.11.8",
+		"jest-environment-jsdom": "^29.7.0"
 	}
 }
