--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Planning-plugin",
+	"name": "planning-plugin",
 	"version": "1.0.0",
 	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
 	"main": "src/main.js",
