--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "planning-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"version": "0.0.4",
+	"description": "This is a Gertting Things Done plug-in for Obsidian",
 	"main": "src/main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -25,8 +25,6 @@
 	},
 	"dependencies": {
 		"@popperjs/core": "^2.11.8",
-		"crypto": "^1.0.1",
-		"jest-environment-jsdom": "^29.7.0",
-		"node": "^23.5.0"
+		"jest-environment-jsdom": "^29.7.0"
 	}
 }
